<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BootUnlocker</string>
    <string name="welcome_text">BootUnlocker allows you to lock and unlock your bootloader from within Android, without rebooting your device, and without a USB connection. <i>BootUnlocker does NOT wipe your data.</i></string>
    <string name="tamper_text">Some devices maintain a flag in the bootloader of whether the device has ever been "tampered". BootUnlocker allows you to change this flag.</string>
    <string name="root_required">Root is <b>REQUIRED</b> for this application.</string>
    <string name="verb_locking">Locking Bootloader</string>
    <string name="verb_unlocking">Unlocking Bootloader</string>
    <string name="verb_lock">Lock</string>
    <string name="verb_unlock">Unlock</string>
    <string name="bootloader_status">Bootloader Status:</string>
    <string name="stat_locked">Locked</string>
    <string name="stat_unlocked">Unlocked</string>
    <string name="stat_no_root">No root access</string>
    <string name="stat_unknown_device">Unsupported device</string>
    <string name="stat_tampered">True (Tampered)</string>
    <string name="stat_not_tampered">False (Not Tampered)</string>   
    <string name="waiting_for_root">Waiting for root&#8230;</string>
    <string name="extra_unknown_device">Device &#8220;%1$s&quot;&#8221; not supported.</string>
    <string name="version">App Version:</string>
    <string name="device">Device: </string>
    <string name="bootloader">Bootloader: </string>
    <string name="tamper_flag">Tamper Flag:</string>
    <string name="verb_clear">Clear</string>
    <string name="verb_set">Set</string>
    <string name="unknown">Unknown</string>
        
</resources>