<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/small_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_pad"
            android:text="@string/bootloader_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/bootLoaderStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_for_root"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/lockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_pad"
            android:onClick="doLockBootloader"
            android:text="@string/verb_lock" />

        <Button
            android:id="@+id/unlockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_pad"
             android:onClick="doUnlockBootloader"
            android:text="@string/verb_unlock" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text" />
    
    <LinearLayout
        android:id="@+id/tamperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible" >
    
    <LinearLayout
        android:layout_marginTop="@dimen/small_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_pad"
            android:text="@string/tamper_flag"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tamperFlagText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_pad"
            android:onClick="doClearTamper"
            android:text="@string/verb_clear" />

        <Button
            android:id="@+id/setButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_pad"
            android:onClick="doSetTamper"
            android:text="@string/verb_set" />

    </LinearLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tamper_text" />
    
    </LinearLayout>
    
    
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_pad"
        android:text="@string/root_required" />

	<TextView
	    android:id="@+id/extendedStatus"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/small_pad"
	    android:text=""
	    android:textColor="@android:color/holo_red_dark" />

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:gravity="bottom" >

	    <TextView
	        android:id="@+id/VersionLine"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/DeviceLine"
	        android:layout_alignParentLeft="true"
	        android:text="@string/version" />

	    <TextView
	        android:id="@+id/DeviceLine"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/BootloaderLine"
	        android:layout_alignParentLeft="true"
	        android:text="@string/device" />

	    <TextView
	        android:id="@+id/BootloaderLine"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:text="@string/bootloader" />

	    <TextView
	        android:id="@+id/versionID"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/VersionLine"
	        android:layout_alignBottom="@+id/VersionLine"
	        android:layout_toRightOf="@+id/VersionLine"
			android:layout_marginLeft="8dp"
	        android:text="" />

	    <TextView
	        android:id="@+id/bootloaderID"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/BootloaderLine"
	        android:layout_alignBottom="@+id/BootloaderLine"
	        android:layout_alignLeft="@+id/versionID"
	        android:text="" />

	    <TextView
	        android:id="@+id/modelID"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/DeviceLine"
	        android:layout_alignBottom="@+id/DeviceLine"
	        android:layout_alignLeft="@+id/versionID"
	        android:text="" />

	    <TextView
	        android:id="@+id/par1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/modelID"
	        android:layout_alignBottom="@+id/modelID"
	        android:layout_toRightOf="@+id/modelID"
	        android:layout_marginLeft="5dp"
	        android:text="(" />
	    
	    <TextView
	        android:id="@+id/deviceID"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/modelID"
	        android:layout_alignBottom="@+id/modelID"
	        android:layout_toRightOf="@+id/par1"
	        android:text=""
	        android:textStyle="italic" />

		<TextView
	        android:id="@+id/par2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/modelID"
	        android:layout_alignBottom="@+id/modelID"
	        android:layout_toRightOf="@+id/deviceID"
	        android:text=")"  />
	    	    
	
	</RelativeLayout>
    
</LinearLayout>